@@ -26,7 +26,6 @@
 package org.niis.xroad.proxy.core.serverproxy;
 
 import ee.ria.xroad.common.CodedException;
-import ee.ria.xroad.common.ErrorCodes;
 import ee.ria.xroad.common.SystemProperties;
 import ee.ria.xroad.common.identifier.ClientId;
 import ee.ria.xroad.common.identifier.ServiceId;
@@ -35,7 +34,6 @@ import ee.ria.xroad.common.metadata.MethodListType;
 import ee.ria.xroad.common.metadata.ObjectFactory;
 import ee.ria.xroad.common.util.MimeTypes;
 import ee.ria.xroad.common.util.RequestWrapper;
-import ee.ria.xroad.common.util.ResponseWrapper;
 
 import com.github.tomakehurst.wiremock.WireMockServer;
 import com.github.tomakehurst.wiremock.client.WireMock;
@@ -63,20 +61,22 @@ import org.junit.BeforeClass;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.contrib.java.lang.system.ProvideSystemProperty;
-import org.junit.rules.ExpectedException;
+import org.mockito.stubbing.Answer;
 import org.niis.xroad.globalconf.GlobalConfProvider;
 import org.niis.xroad.opmonitor.api.OpMonitoringData;
-import org.niis.xroad.proxy.application.testsuite.TestSuiteGlobalConf;
-import org.niis.xroad.proxy.application.testsuite.TestSuiteServerConf;
 import org.niis.xroad.proxy.core.common.WsdlRequestData;
 import org.niis.xroad.proxy.core.protocol.ProxyMessage;
 import org.niis.xroad.proxy.core.test.MetaserviceTestUtil;
+import org.niis.xroad.proxy.core.test.TestSuiteGlobalConf;
+import org.niis.xroad.proxy.core.test.TestSuiteServerConf;
 import org.niis.xroad.serverconf.ServerConfProvider;
-import org.niis.xroad.serverconf.model.ClientType;
+import org.niis.xroad.serverconf.impl.entity.ClientEntity;
+import org.niis.xroad.serverconf.impl.entity.ServerConfEntity;
+import org.niis.xroad.serverconf.impl.entity.ServiceDescriptionEntity;
+import org.niis.xroad.serverconf.impl.entity.ServiceEntity;
+import org.niis.xroad.serverconf.impl.entity.ServiceIdEntity;
+import org.niis.xroad.serverconf.impl.mapper.XRoadIdMapper;
 import org.niis.xroad.serverconf.model.DescriptionType;
-import org.niis.xroad.serverconf.model.ServerConfType;
-import org.niis.xroad.serverconf.model.ServiceDescriptionType;
-import org.niis.xroad.serverconf.model.ServiceType;
 import org.niis.xroad.test.serverconf.TestServerConfWrapper;
 import org.xml.sax.InputSource;
 import org.xmlunit.builder.DiffBuilder;
@@ -92,6 +92,7 @@ import javax.wsdl.xml.WSDLReader;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.OutputStream;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -101,21 +102,25 @@ import java.util.List;
 import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlPathEqualTo;
 import static com.github.tomakehurst.wiremock.core.WireMockConfiguration.options;
+import static ee.ria.xroad.common.ErrorCodes.X_INVALID_REQUEST;
 import static ee.ria.xroad.common.ErrorCodes.X_INVALID_SERVICE_TYPE;
 import static ee.ria.xroad.common.ErrorCodes.X_UNKNOWN_SERVICE;
 import static ee.ria.xroad.common.util.MimeTypes.TEXT_XML_UTF8;
 import static ee.ria.xroad.common.util.MimeUtils.HEADER_CONTENT_TYPE;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertThat;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static org.niis.xroad.proxy.core.test.MetaserviceTestUtil.ALLOWED_METHODS_REQUEST;
-import static org.niis.xroad.proxy.core.test.MetaserviceTestUtil.CodedExceptionMatcher.faultCodeEquals;
 import static org.niis.xroad.proxy.core.test.MetaserviceTestUtil.GET_WSDL_REQUEST;
 import static org.niis.xroad.proxy.core.test.MetaserviceTestUtil.LIST_METHODS_REQUEST;
 import static org.niis.xroad.proxy.core.test.MetaserviceTestUtil.REQUEST;
@@ -151,9 +156,6 @@ public class MetadataServiceHandlerTest {
     private static Marshaller marshaller;
 
     @Rule
-    public ExpectedException thrown = ExpectedException.none();
-
-    @Rule
     public final ProvideSystemProperty hibernatePropertiesProperty
             = new ProvideSystemProperty(SystemProperties.DATABASE_PROPERTIES,
             "src/test/resources/hibernate.properties");
@@ -161,8 +163,6 @@ public class MetadataServiceHandlerTest {
 
     private HttpClient httpClientMock;
     private RequestWrapper mockRequest;
-    private ResponseWrapper mockResponse;
-    private MetaserviceTestUtil.StubServletOutputStream mockServletOutputStream;
     private ProxyMessage mockProxyMessage;
     private WireMockServer mockServer;
     private TestServerConfWrapper serverConfProvider;
@@ -191,9 +191,6 @@ public class MetadataServiceHandlerTest {
 
         httpClientMock = mock(HttpClient.class);
         mockRequest = mock(RequestWrapper.class);
-        mockResponse = mock(ResponseWrapper.class);
-
-        mockServletOutputStream = new MetaserviceTestUtil.StubServletOutputStream();
 
         mockProxyMessage = mock(ProxyMessage.class);
 
@@ -225,7 +222,7 @@ public class MetadataServiceHandlerTest {
                         soapBody -> soapBody.addChildElement(LIST_METHODS_REQUEST).addChildElement(REQUEST))
                 .buildAsInputStream();
 
-        when(mockProxyMessage.getSoapContent()).thenReturn(soapContentInputStream);
+        doAnswer(copyStream(soapContentInputStream)).when(mockProxyMessage).writeSoapContent(any());
 
         // execution & verification
 
@@ -248,7 +245,7 @@ public class MetadataServiceHandlerTest {
                         soapBody -> soapBody.addChildElement(ALLOWED_METHODS_REQUEST).addChildElement(REQUEST))
                 .buildAsInputStream();
 
-        when(mockProxyMessage.getSoapContent()).thenReturn(soapContentInputStream);
+        doAnswer(copyStream(soapContentInputStream)).when(mockProxyMessage).writeSoapContent(any());
 
         // execution & verification
 
@@ -273,7 +270,7 @@ public class MetadataServiceHandlerTest {
                         soapBody -> soapBody.addChildElement(GET_WSDL_REQUEST).addChildElement(REQUEST))
                 .buildAsInputStream();
 
-        when(mockProxyMessage.getSoapContent()).thenReturn(soapContentInputStream);
+        doAnswer(copyStream(soapContentInputStream)).when(mockProxyMessage).writeSoapContent(any());
 
         // execution & verification
         assertTrue("Wasn't able to handle get wsdl",
@@ -294,8 +291,7 @@ public class MetadataServiceHandlerTest {
 
         serverConfProvider.setServerConfProvider(new TestSuiteServerConf() {
             @Override
-            public List<ServiceId.Conf> getServicesByDescriptionType(ClientId serviceProvider,
-                                                                     DescriptionType descriptionType) {
+            public List<ServiceId.Conf> getServicesByDescriptionType(ClientId serviceProvider, DescriptionType descriptionType) {
                 assertThat("Client id does not match expected", serviceProvider, is(expectedClient));
                 return expectedServices;
             }
@@ -310,7 +306,7 @@ public class MetadataServiceHandlerTest {
                         soapBody -> soapBody.addChildElement(LIST_METHODS_REQUEST).addChildElement(REQUEST))
                 .buildAsInputStream();
 
-        when(mockProxyMessage.getSoapContent()).thenReturn(soapContentInputStream);
+        doAnswer(copyStream(soapContentInputStream)).when(mockProxyMessage).writeSoapContent(any());
 
         handlerToTest.canHandle(serviceId, mockProxyMessage);
 
@@ -350,7 +346,6 @@ public class MetadataServiceHandlerTest {
         final ClientId expectedClient = DEFAULT_CLIENT;
         final ServiceId serviceId = ServiceId.Conf.create(DEFAULT_CLIENT, ALLOWED_METHODS);
 
-
         serverConfProvider.setServerConfProvider(new TestSuiteServerConf() {
 
             @Override
@@ -374,7 +369,7 @@ public class MetadataServiceHandlerTest {
                         soapBody -> soapBody.addChildElement(ALLOWED_METHODS_REQUEST).addChildElement(REQUEST))
                 .buildAsInputStream();
 
-        when(mockProxyMessage.getSoapContent()).thenReturn(soapContentInputStream);
+        doAnswer(copyStream(soapContentInputStream)).when(mockProxyMessage).writeSoapContent(any());
 
         handlerToTest.canHandle(serviceId, mockProxyMessage);
 
@@ -408,27 +403,26 @@ public class MetadataServiceHandlerTest {
 
         final ServiceId.Conf serviceId = ServiceId.Conf.create(DEFAULT_CLIENT, GET_WSDL);
 
-        MetadataServiceHandlerImpl handlerToTest = new MetadataServiceHandlerImpl(serverConfProvider, globalConfProvider);
+        var handlerToTest = new MetadataServiceHandlerImpl(serverConfProvider, globalConfProvider);
 
-        InputStream soapContentInputStream = new TestSoapBuilder()
+        var soapContentInputStream = new TestSoapBuilder()
                 .withClient(DEFAULT_CLIENT)
                 .withService(serviceId)
                 .withModifiedBody(
                         soapBody -> soapBody.addChildElement(GET_WSDL_REQUEST).addChildElement(REQUEST))
                 .buildAsInputStream();
 
-        when(mockProxyMessage.getSoapContent()).thenReturn(soapContentInputStream);
+        doAnswer(copyStream(soapContentInputStream)).when(mockProxyMessage).writeSoapContent(any());
 
         handlerToTest.canHandle(serviceId, mockProxyMessage);
 
-        thrown.expect(CodedException.class);
-        thrown.expect(faultCodeEquals(ErrorCodes.X_INVALID_REQUEST));
-        thrown.expectMessage(containsString("Missing serviceCode in message body"));
-
         // execution, should throw..
 
-        handlerToTest.startHandling(mockRequest, mockProxyMessage,
-                httpClientMock, mock(OpMonitoringData.class));
+        var ce = assertThrows(CodedException.class, () -> handlerToTest.startHandling(mockRequest, mockProxyMessage,
+                httpClientMock, mock(OpMonitoringData.class)));
+
+        assertEquals(X_INVALID_REQUEST, ce.getFaultCode());
+        assertTrue(ce.getMessage().contains("Missing serviceCode in message body"));
     }
 
     @Test
@@ -449,18 +443,17 @@ public class MetadataServiceHandlerTest {
                         soapBody -> marshaller.marshal(wsdlRequestData, soapBody))
                 .buildAsInputStream();
 
-        when(mockProxyMessage.getSoapContent()).thenReturn(soapContentInputStream);
+        doAnswer(copyStream(soapContentInputStream)).when(mockProxyMessage).writeSoapContent(any());
 
         handlerToTest.canHandle(serviceId, mockProxyMessage);
 
-        thrown.expect(CodedException.class);
-        thrown.expect(faultCodeEquals(X_UNKNOWN_SERVICE));
-        thrown.expectMessage(containsString("Could not find wsdl URL for service"));
-
         // execution, should throw..
 
-        handlerToTest.startHandling(mockRequest, mockProxyMessage,
-                httpClientMock, mock(OpMonitoringData.class));
+        var ce = assertThrows(CodedException.class, () -> handlerToTest.startHandling(mockRequest, mockProxyMessage,
+                httpClientMock, mock(OpMonitoringData.class)));
+
+        assertEquals(X_UNKNOWN_SERVICE, ce.getFaultCode());
+        assertTrue(ce.getMessage().contains("Could not find wsdl URL for service"));
     }
 
     @Test
@@ -481,25 +474,22 @@ public class MetadataServiceHandlerTest {
                         soapBody -> marshaller.marshal(wsdlRequestData, soapBody))
                 .buildAsInputStream();
 
-        when(mockProxyMessage.getSoapContent()).thenReturn(soapContentInputStream);
+        doAnswer(copyStream(soapContentInputStream)).when(mockProxyMessage).writeSoapContent(any());
 
         setUpDatabase(requestingWsdlForService);
-
 
         mockServer.stubFor(WireMock.any(urlPathEqualTo(EXPECTED_WSDL_QUERY_PATH))
                 .willReturn(aResponse().withStatus(HttpStatus.FORBIDDEN_403)));
         mockServer.start();
 
-
         handlerToTest.canHandle(serviceId, mockProxyMessage);
-
-        thrown.expect(RuntimeException.class);
-        thrown.expectMessage(containsString("Received HTTP error: 403 - Forbidden"));
 
         // execution, should throw..
 
-        handlerToTest.startHandling(mockRequest, mockProxyMessage,
-                httpClientMock, mock(OpMonitoringData.class));
+        var re = assertThrows(RuntimeException.class, () -> handlerToTest.startHandling(mockRequest, mockProxyMessage,
+                httpClientMock, mock(OpMonitoringData.class)));
+
+        assertTrue(re.getMessage().contains("Received HTTP error: 403 - Forbidden"));
     }
 
     private static final class TestMetadataServiceHandlerImpl extends MetadataServiceHandlerImpl {
@@ -582,7 +572,7 @@ public class MetadataServiceHandlerTest {
                 Arrays.asList("getRandom", "helloService");
 
         final List<String> expectedEndpointUrls =
-                Arrays.asList("expected-location");
+                List.of("expected-location");
 
         assertThat("Content type does not match", handlerToTest.getResponseContentType(),
                 containsString("multipart/related; type=\"text/xml\"; charset=UTF-8;"));
@@ -613,11 +603,10 @@ public class MetadataServiceHandlerTest {
         final ServiceId.Conf serviceId = ServiceId.Conf.create(DEFAULT_CLIENT, GET_WSDL);
         TestMetadataServiceHandlerImpl handlerToTest = prepareTestConstructsForWsdl(serviceId, true);
 
-        thrown.expect(CodedException.class);
-        thrown.expect(faultCodeEquals(X_INVALID_SERVICE_TYPE));
+        var ce = assertThrows(CodedException.class, () -> handlerToTest.startHandling(mockRequest, mockProxyMessage,
+                httpClientMock, mock(OpMonitoringData.class)));
 
-        handlerToTest.startHandling(mockRequest, mockProxyMessage,
-                httpClientMock, mock(OpMonitoringData.class));
+        assertEquals(X_INVALID_SERVICE_TYPE, ce.getFaultCode());
 
     }
 
@@ -625,7 +614,7 @@ public class MetadataServiceHandlerTest {
      * Prepare TestMetadataServiceHandlerImpl, wiremock, et al for get WSDL tests
      */
     private TestMetadataServiceHandlerImpl prepareTestConstructsForWsdl(ServiceId serviceId, boolean isRest) throws
-            Exception {
+                                                                                                             Exception {
         final ServiceId.Conf requestingWsdlForService = ServiceId.Conf.create(DEFAULT_CLIENT, "someServiceWithWsdl122");
 
         TestMetadataServiceHandlerImpl handlerToTest = new TestMetadataServiceHandlerImpl(serverConfProvider, globalConfProvider);
@@ -640,10 +629,9 @@ public class MetadataServiceHandlerTest {
                         soapBody -> marshaller.marshal(wsdlRequestData, soapBody))
                 .buildAsInputStream();
 
-        when(mockProxyMessage.getSoapContent()).thenReturn(soapContentInputStream);
+        doAnswer(copyStream(soapContentInputStream)).when(mockProxyMessage).writeSoapContent(any());
 
-        setUpDatabase(requestingWsdlForService, isRest);
-
+        setUpDatabase(XRoadIdMapper.get().toEntity(requestingWsdlForService), isRest);
 
         mockServer.stubFor(WireMock.any(urlPathEqualTo(EXPECTED_WSDL_QUERY_PATH))
                 .willReturn(aResponse().withBodyFile("wsdl.wsdl")));
@@ -665,18 +653,18 @@ public class MetadataServiceHandlerTest {
         );
     }
 
-    private void setUpDatabase(ServiceId.Conf serviceId, boolean isRest) throws Exception {
-        ServerConfType conf = new ServerConfType();
+    private void setUpDatabase(ServiceIdEntity serviceId, boolean isRest) throws Exception {
+        ServerConfEntity conf = new ServerConfEntity();
         conf.setServerCode("TestServer");
 
-        ClientType client = new ClientType();
+        ClientEntity client = new ClientEntity();
         client.setConf(conf);
 
-        conf.getClient().add(client);
+        conf.getClients().add(client);
 
         client.setIdentifier(serviceId.getClientId());
 
-        ServiceDescriptionType wsdl = new ServiceDescriptionType();
+        ServiceDescriptionEntity wsdl = new ServiceDescriptionEntity();
         wsdl.setClient(client);
         wsdl.setUrl(MOCK_SERVER_WSDL_URL);
         if (isRest) {
@@ -685,14 +673,14 @@ public class MetadataServiceHandlerTest {
             wsdl.setType(DescriptionType.WSDL);
         }
 
-        ServiceType service = new ServiceType();
+        ServiceEntity service = new ServiceEntity();
         service.setServiceDescription(wsdl);
         service.setTitle("someTitle");
         service.setServiceCode(serviceId.getServiceCode());
 
-        wsdl.getService().add(service);
+        wsdl.getServices().add(service);
 
-        client.getServiceDescription().add(wsdl);
+        client.getServiceDescriptions().add(wsdl);
 
         doInTransaction(session -> {
             session.persist(conf);
@@ -702,7 +690,7 @@ public class MetadataServiceHandlerTest {
     }
 
     private void setUpDatabase(ServiceId.Conf serviceId) throws Exception {
-        setUpDatabase(serviceId, false);
+        setUpDatabase(XRoadIdMapper.get().toEntity(serviceId), false);
     }
 
     private TestMimeContentHandler parseWsdlResponse(InputStream inputStream, String headlessContentType)
@@ -715,6 +703,15 @@ public class MetadataServiceHandlerTest {
         return contentHandler;
     }
 
+    private Answer<Object> copyStream(InputStream source) {
+        return args -> {
+            OutputStream out = args.getArgument(0);
+            try (out; source) {
+                IOUtils.copy(source, out);
+            }
+            return null;
+        };
+    }
 
     private static final class TestMimeContentHandler extends AbstractContentHandler {
 
