@@ -1,5 +1,6 @@
 /*
  * The MIT License
+ *
  * Copyright (c) 2019- Nordic Institute for Interoperability Solutions (NIIS)
  * Copyright (c) 2018 Estonian Information System Authority (RIA),
  * Nordic Institute for Interoperability Solutions (NIIS), Population Register Centre (VRK)
@@ -41,11 +42,11 @@ import org.niis.xroad.globalconf.GlobalConfProvider;
 import org.niis.xroad.serverconf.IsAuthentication;
 import org.niis.xroad.serverconf.ServerConfProvider;
 import org.niis.xroad.serverconf.impl.dao.ServiceDAOImpl;
+import org.niis.xroad.serverconf.impl.mapper.XRoadIdMapper;
 import org.niis.xroad.test.globalconf.TestGlobalConfImpl;
 
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static ee.ria.xroad.common.ErrorCodes.X_UNKNOWN_SERVICE;
@@ -84,7 +85,6 @@ public class ServerConfTest {
     @Rule
     public ExpectedCodedException thrown = ExpectedCodedException.none();
 
-    private static GlobalConfProvider globalConfProvider;
     private static ServerConfProvider serverConfProvider;
 
     /**
@@ -96,7 +96,7 @@ public class ServerConfTest {
     public static void setUpBeforeClass() throws Exception {
         prepareDB();
 
-        globalConfProvider = new TestGlobalConfImpl();
+        GlobalConfProvider globalConfProvider = new TestGlobalConfImpl();
         serverConfProvider = new ServerConfImpl(globalConfProvider);
     }
 
@@ -181,7 +181,7 @@ public class ServerConfTest {
         ClientId client1 = createTestClientId(client(1));
         ClientId client2 = createTestClientId(client(2));
 
-        List<ServiceId> expectedServices = Arrays.asList(
+        List<ServiceId> expectedServices = List.of(
                 createTestServiceId(serviceProvider,
                         service(1, 1), SERVICE_VERSION));
 
@@ -287,7 +287,7 @@ public class ServerConfTest {
         List<X509Certificate> isCerts =
                 serverConfProvider.getIsCerts(createTestClientId(client(1)));
         assertEquals(1, isCerts.size());
-        assertEquals(CryptoUtils.readCertificate(BASE64_CERT), isCerts.get(0));
+        assertEquals(CryptoUtils.readCertificate(BASE64_CERT), isCerts.getFirst());
     }
 
     /**
@@ -358,9 +358,9 @@ public class ServerConfTest {
         assertEquals(NUM_SERVICEDESCRIPTIONS * NUM_SERVICES, allServices.size());
     }
 
-    private static List<ServiceId.Conf> getServices(ClientId serviceProvider) {
-        return new ServiceDAOImpl().getServices(
-                ServerConfDatabaseCtx.get().getSession(),
-                serviceProvider);
+    private static List<ServiceId.Conf> getServices(ClientId serviceProviderId) {
+        return XRoadIdMapper.get().toServices(new ServiceDAOImpl().getServices(
+                ServerConfDatabaseCtx.get().getSession(), serviceProviderId)
+        );
     }
 }
