@@ -58,6 +58,7 @@ import org.niis.xroad.signer.proto.CertificateServiceGrpc;
 import org.niis.xroad.signer.proto.DeleteCertReq;
 import org.niis.xroad.signer.proto.DeleteCertRequestReq;
 import org.niis.xroad.signer.proto.DeleteKeyReq;
+import org.niis.xroad.signer.proto.DeleteTokenReq;
 import org.niis.xroad.signer.proto.GenerateCertRequestReq;
 import org.niis.xroad.signer.proto.GenerateKeyReq;
 import org.niis.xroad.signer.proto.GenerateSelfSignedCertReq;
@@ -190,7 +191,7 @@ public final class SignerRpcClient {
                 () -> client.execute(ctx -> ctx.getBlockingTokenService().listTokens(Empty.newBuilder().build()))
                         .getTokensList().stream()
                         .map(TokenInfo::new)
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
@@ -275,6 +276,23 @@ public final class SignerRpcClient {
                         .setTokenId(tokenId)
                         .setActivate(false)
                         .build()));
+    }
+
+    /**
+     * Delete the token with the given ID.
+     *
+     * @param tokenId ID of the token
+     * @throws SignerException if any errors occur
+     */
+    public void deleteToken(String tokenId) throws SignerException {
+        log.trace("Delete token '{}'", tokenId);
+
+        tryToRun(
+                () -> client.execute(ctx -> ctx.getBlockingTokenService()
+                        .deleteToken(DeleteTokenReq.newBuilder()
+                                .setTokenId(tokenId)
+                                .build()))
+        );
     }
 
     /**
@@ -937,7 +955,7 @@ public final class SignerRpcClient {
                                         .build()))
                         .getCertsList().stream()
                         .map(CertificateInfo::new)
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
